@@ -23,15 +23,23 @@
 #include "baseguiplus.h"
 #include <QPoint>
 
+#define USE_TIMESLIDERACTION 1
+
 class QLabel;
 class QToolBar;
-class TimeSlider;
-class MySlider;
 class QPushButton;
 class QResizeEvent;
 class FloatingControl;
 class MyAction;
 class QMenu;
+
+#if USE_TIMESLIDERACTION
+class TimeSliderAction;
+class VolumeSliderAction;
+#else
+class TimeSlider;
+class MySlider;
+#endif
 
 class DefaultGui : public BaseGuiPlus
 {
@@ -91,11 +99,16 @@ protected:
 	QPushButton * select_audio;
 	QPushButton * select_subtitle;
 
+#if USE_TIMESLIDERACTION
+	TimeSliderAction * timeslider_action;
+	VolumeSliderAction * volumeslider_action;
+#else
 	TimeSlider * timeslider;
 	TimeSlider * timeslider_mini;
 
 	MySlider * volumeslider;
 	MySlider * volumeslider_mini;
+#endif
 
 	FloatingControl * floating_control;
 
